--- a/index.html
+++ b/index.html
@@ -54,31 +54,48 @@
     <!-- Skip link pour accessibilité -->
     <a href="#main-content" class="skip-link">Aller au contenu principal</a>
     
-    <!-- Header -->
+    <!-- Header avec logo à gauche et navigation fixe à droite -->
     <header role="banner">
         <div class="container">
             <div class="header-content">
+                <!-- Logo à gauche -->
                 <div class="logo-section">
                     <div class="logo">
                         <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
                     </div>
                     <p class="slogan">Où la voix rencontre les chiffres</p>
                 </div>
-
             </div>
         </div>
     </header>
 
-    <!-- Navigation par onglets -->
-    <nav class="tabs-nav" role="navigation" aria-label="Navigation principale">
-        <div class="swipe-hint">👉 Faites glisser pour voir plus</div>
-        <div class="tabs-container">
-            <button class="tab-btn active" data-tab="mode-normal" aria-selected="true"><span class="tab-icon">📝</span>Mode Normal</button>
-            <button class="tab-btn" data-tab="guide" aria-selected="false"><span class="tab-icon">📖</span>Guide</button>
-            <button class="tab-btn" data-tab="contact" aria-selected="false"><span class="tab-icon">📧</span>Contact</button>
-            <button class="tab-btn" data-tab="faq" aria-selected="false"><span class="tab-icon">❓</span>FAQ</button>
-            <button class="tab-btn" data-tab="mode-test" aria-selected="false"><span class="tab-icon">🧪</span>Mode Test</button>
-            <button class="tab-btn" data-tab="mode-dmi" aria-selected="false"><span class="tab-icon">📝</span>Mode DMI</button>
+    <!-- Barre de navigation fixe en haut à droite -->
+    <nav class="fixed-modes-nav" role="navigation" aria-label="Navigation des modes">
+        <div class="modes-container">
+            <button class="mode-btn active" data-tab="mode-normal" aria-selected="true" title="Mode Normal - Dictée médicale avec authentification">
+                <span class="mode-icon">📝</span>
+                <span class="mode-text">Normal</span>
+            </button>
+            <button class="mode-btn" data-tab="guide" aria-selected="false" title="Guide d'utilisation DictaMed">
+                <span class="mode-icon">📖</span>
+                <span class="mode-text">Guide</span>
+            </button>
+            <button class="mode-btn" data-tab="contact" aria-selected="false" title="Nous contacter pour un devis">
+                <span class="mode-icon">📧</span>
+                <span class="mode-text">Contact</span>
+            </button>
+            <button class="mode-btn" data-tab="faq" aria-selected="false" title="Questions fréquemment posées">
+                <span class="mode-icon">❓</span>
+                <span class="mode-text">FAQ</span>
+            </button>
+            <button class="mode-btn" data-tab="mode-test" aria-selected="false" title="Mode Test - Démonstration gratuite">
+                <span class="mode-icon">🧪</span>
+                <span class="mode-text">Test</span>
+            </button>
+            <button class="mode-btn" data-tab="mode-dmi" aria-selected="false" title="Mode DMI - Import de dossiers médicaux">
+                <span class="mode-icon">📋</span>
+                <span class="mode-text">DMI</span>
+            </button>
         </div>
     </nav>
 
