--- a/index.html
+++ b/index.html
@@ -392,11 +392,10 @@
             <div class="card">
                 <h2>Commander DictaMed</h2>
                 <p>📧 <strong>Email :</strong> 
-   <a href="/cdn-cgi/l/email-protection#17537e7463765a7273394447444457707a767e7b3974787a">
-       <span class="__cf_email__" data-cfemail="bafed3d9cedbf7dfde94e9eae9e9faddd7dbd3d694d9d5d7">[email&#160;protected]</span>
+   <a href="mailto:contact@dictamed.com">
+       contact@dictamed.com
    </a>
 </p>
->
                 <p>📘 <strong>Facebook :</strong> <a href="https://www.facebook.com/DictaMed.SPSS" target="_blank">DictaMed.SPSS</a></p>
                 <p class="info-box">💰 Tarification personnalisée selon le nombre de patients et de variables à collecter.</p>
             </div>
@@ -450,7 +449,7 @@
     <h3>6. Comment obtenir un devis ?</h3>
     <p>
         Contactez-nous par email à 
-        <a href="/cdn-cgi/l/email-protection#0f4b666c7b6e426a6b215c5f5c5c4f68626e6663216c6062"><span class="__cf_email__" data-cfemail="bcf8d5dfc8ddf1d9d892efecefeffcdbd1ddd5d092dfd3d1">[email&#160;protected]</span></a> 
+        <a href="mailto:contact@dictamed.com">contact@dictamed.com</a> 
         en fournissant les informations listées dans l'onglet Contact. 
         Nous vous répondrons sous 48 heures ouvrées avec un devis personnalisé adapté à vos besoins.
     </p>
@@ -712,12 +711,12 @@
     <div class="container">
         <p>
             &copy; 2025 DictaMed - Tous droits réservés | 
-            Contact : <a href="/cdn-cgi/l/email-protection#5a1e33392e3b173f3e74090a09091a3d373b333674393537"><span class="__cf_email__" data-cfemail="abefc2c8dfcae6cecf85f8fbf8f8ebccc6cac2c785c8c4c6">[email&#160;protected]</span></a>
+            Contact : <a href="mailto:contact@dictamed.com">contact@dictamed.com</a>
         </p>
     </div>
 </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
