--- a/index.html
+++ b/index.html
@@ -82,11 +82,87 @@
             <div class="swipe-hint">← Glissez pour naviguer →</div>
         </nav>
 
-        <!-- Contenu des onglets - Conteneur dynamique -->
+        <!-- Page d'accueil -->
         <div id="tab-content" class="tab-content active">
-            <!-- Le contenu sera chargé dynamiquement ici -->
-            <div class="loading-content">
-                <p>Chargement...</p>
+            <div class="hero-section-modern">
+                <div class="hero-content-modern">
+                    <h1 class="hero-title">
+                        <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
+                    </h1>
+                    <p class="hero-subtitle">
+                        Dictée médicale intelligente
+                    </p>
+                    <p class="hero-description">
+                        Transformez votre voix en texte médical structuré en quelques secondes.
+                    </p>
+                    <div class="hero-cta">
+                        <button class="btn btn-primary btn-large" onclick="switchTab('mode-test')">
+                            🧪 Essayer gratuitement
+                        </button>
+                        <button class="btn btn-secondary btn-large" onclick="switchTab('guide')">
+                            📖 Guide
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Section Fonctionnalités et Modes - Consolidée -->
+            <div class="features-modes-section">
+                <div class="features-overview">
+                    <h2>🚀 Pourquoi DictaMed ?</h2>
+                    <div class="features-grid-modern">
+                        <div class="feature-card-modern">
+                            <div class="feature-icon-modern">🎤</div>
+                            <h4>Dictée Vocale</h4>
+                            <p>Transcription automatique en temps réel</p>
+                        </div>
+                        <div class="feature-card-modern">
+                            <div class="feature-icon-modern">🔒</div>
+                            <h4>Sécurisé</h4>
+                            <p>Conformité aux normes médicales</p>
+                        </div>
+                        <div class="feature-card-modern">
+                            <div class="feature-icon-modern">⚡</div>
+                            <h4>Rapide</h4>
+                            <p>Résultats instantanés</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modes-overview">
+                    <h2>🎯 Choisissez votre mode</h2>
+                    <div class="modes-grid-modern">
+                        <div class="mode-card-modern demo-mode">
+                            <div class="mode-icon-modern">🧪</div>
+                            <h4>Démonstration</h4>
+                            <p>Essayez gratuitement</p>
+                            <span class="mode-badge">Gratuit</span>
+                            <button class="btn btn-primary btn-small" onclick="switchTab('mode-test')">
+                                Essayer
+                            </button>
+                        </div>
+
+                        <div class="mode-card-modern production-mode">
+                            <div class="mode-icon-modern">🏥</div>
+                            <h4>Production</h4>
+                            <p>Mode professionnel</p>
+                            <span class="mode-badge">Sécurisé</span>
+                            <button class="btn btn-secondary btn-small" onclick="switchTab('mode-normal')">
+                                Accéder
+                            </button>
+                        </div>
+
+                        <div class="mode-card-modern dmi-mode">
+                            <div class="mode-icon-modern">📝</div>
+                            <h4>Saisie Texte</h4>
+                            <p>Texte + photos</p>
+                            <span class="mode-badge">Flexible</span>
+                            <button class="btn btn-secondary btn-small" onclick="switchTab('mode-dmi')">
+                                Accéder
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
