--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
     <script src="js/components/loading-overlay.js"></script>
     <script src="js/components/audio-recorder.js"></script>
     <script src="js/components/audio-recorder-manager.js"></script>
+    <script src="js/components/data-sender.js"></script>
     <script src="js/components/navigation.js"></script>
     <script src="js/components/auto-save.js"></script>
     <script src="js/components/form-validation.js"></script>
@@ -333,6 +334,9 @@
     <script src="js/tabs/home.js"></script>
     <script src="js/tabs/normal-mode.js"></script>
     <script src="js/tabs/test-mode.js"></script>
+    
+    <!-- Script de diagnostic -->
+    <script src="diagnostic-debug.js"></script>
     
     <!-- Point d'entrée principal -->
     <script src="js/main.js"></script>
