--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <script src="js/components/photo-management.js"></script>
     <script src="js/components/dmi-data-sender.js"></script>
     <script src="js/components/auth-modal.js"></script>
+    <script src="js/components/firebase-auth-manager.js"></script>
     
     <!-- Modules Tabs -->
     <script src="js/tabs/home.js"></script>
