--- a/index.html
+++ b/index.html
@@ -16,24 +16,9 @@
     <div class="fixed-nav-header" id="fixedNavHeader">
         <div class="fixed-nav-container">
             <div class="nav-logo-left">
-                <a href="#" class="header-logo" title="DictaMed - Dictée Médicale Intelligente">
-                    <div class="logo-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <!-- Medical Cross -->
-                            <rect x="10" y="3" width="4" height="18" rx="1" fill="white"/>
-                            <rect x="3" y="10" width="18" height="4" rx="1" fill="white"/>
-                            <!-- Microphone -->
-                            <path d="M12 14C13.1046 14 14 13.1046 14 12V9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9V12C10 13.1046 10.8954 14 12 14Z" fill="white"/>
-                            <path d="M5 11C5 9.89543 5.89543 9 7 9H17C18.1046 9 19 9.89543 19 11V12C19 13.1046 18.1046 14 17 14H7C5.89543 14 5 13.1046 5 12V11Z" fill="white"/>
-                            <rect x="7" y="16" width="10" height="2" rx="1" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="logo-text">
-                        <div class="logo-dicta">Dicta</div>
-                        <div class="logo-med">Med</div>
-                        <div class="logo-subtitle">Medical Dictation</div>
-                    </div>
-                </a>
+                <div class="header-logo">
+                    <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
+                </div>
             </div>
             <div class="nav-tabs-right">
                 <button class="fixed-nav-btn active" data-tab="home">
@@ -121,21 +106,7 @@
                     </div>
                     
                     <h1 class="hero-title">
-                        <div class="header-logo" style="justify-content: center; margin-bottom: 20px;">
-                            <div class="logo-icon">
-                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect x="10" y="3" width="4" height="18" rx="1" fill="white"/>
-                                    <rect x="3" y="10" width="18" height="4" rx="1" fill="white"/>
-                                    <path d="M12 14C13.1046 14 14 13.1046 14 12V9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9V12C10 13.1046 10.8954 14 12 14Z" fill="white"/>
-                                    <path d="M5 11C5 9.89543 5.89543 9 7 9H17C18.1046 9 19 9.89543 19 11V12C19 13.1046 18.1046 14 17 14H7C5.89543 14 5 13.1046 5 12V11Z" fill="white"/>
-                                    <rect x="7" y="16" width="10" height="2" rx="1" fill="white"/>
-                                </svg>
-                            </div>
-                            <div class="logo-text">
-                                <div class="logo-dicta">Dicta</div>
-                                <div class="logo-med">Med</div>
-                            </div>
-                        </div>
+                        <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
                     </h1>
                     <p class="hero-subtitle">
                         Dictée médicale intelligente nouvelle génération
@@ -310,20 +281,8 @@
     <div id="authModal" class="auth-modal hidden">
         <div class="auth-modal-content">
             <div class="auth-modal-header">
-                <div class="auth-modal-logo header-logo">
-                    <div class="logo-icon">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="10" y="3" width="4" height="18" rx="1" fill="white"/>
-                            <rect x="3" y="10" width="18" height="4" rx="1" fill="white"/>
-                            <path d="M12 14C13.1046 14 14 13.1046 14 12V9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9V12C10 13.1046 10.8954 14 12 14Z" fill="white"/>
-                            <path d="M5 11C5 9.89543 5.89543 9 7 9H17C18.1046 9 19 9.89543 19 11V12C19 13.1046 18.1046 14 17 14H7C5.89543 14 5 13.1046 5 12V11Z" fill="white"/>
-                            <rect x="7" y="16" width="10" height="2" rx="1" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="logo-text">
-                        <div class="logo-dicta">Dicta</div>
-                        <div class="logo-med">Med</div>
-                    </div>
+                <div class="auth-modal-logo">
+                    <span class="logo-dicta">Dicta</span><span class="logo-med">Med</span>
                 </div>
                 <h2 id="authModalTitle">Connexion</h2>
                 <button class="auth-modal-close" data-action="close-auth" aria-label="Fermer">&times;</button>
