Add dynamic tab content sections for guide, FAQ, and modes in index.html; refactor navigation.js for improved tab loading and display logic

--- a/index.html
+++ b/index.html
@@ -160,6 +160,41 @@
             </div>
         </div>
 
+        <!-- Guide (caché par défaut) -->
+        <div id="guide-content" class="tab-content" style="display: none;">
+            <div id="guide-container">
+                <!-- Le contenu sera chargé dynamiquement -->
+            </div>
+        </div>
+
+        <!-- FAQ (caché par défaut) -->
+        <div id="faq-content" class="tab-content" style="display: none;">
+            <div id="faq-container">
+                <!-- Le contenu sera chargé dynamiquement -->
+            </div>
+        </div>
+
+        <!-- Mode Normal (caché par défaut) -->
+        <div id="mode-normal-content" class="tab-content" style="display: none;">
+            <div id="mode-normal-container">
+                <!-- Le contenu sera chargé dynamiquement -->
+            </div>
+        </div>
+
+        <!-- Mode Test (caché par défaut) -->
+        <div id="mode-test-content" class="tab-content" style="display: none;">
+            <div id="mode-test-container">
+                <!-- Le contenu sera chargé dynamiquement -->
+            </div>
+        </div>
+
+        <!-- Mode DMI (caché par défaut) -->
+        <div id="mode-dmi-content" class="tab-content" style="display: none;">
+            <div id="mode-dmi-container">
+                <!-- Le contenu sera chargé dynamiquement -->
+            </div>
+        </div>
+
         <!-- Résultat Google Sheet (caché par défaut) -->
         <div id="googleSheetCard" class="card google-sheet-result" style="display: none;">
             <h2>✅ Données envoyées avec succès !</h2>
