Refactor index.html to remove fallback CSS and update stat trend text; enhance error handling in main.js for dependency validation; add PerformanceOptimizer class for improved performance optimizations.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="style-optimized.css">
     <link rel="icon" type="image/png" sizes="32x32" href="icon-72x72.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon-72x72.png">
-    
-    <!-- CSS de Fallback - S'active si style-optimized.css ne se charge pas -->
-    <link rel="stylesheet" href="style-fallback.css">
 </head>
 <body>
     <!-- Navigation fixe horizontale en header -->
@@ -138,7 +135,7 @@
                         <div class="stat-card-modern">
                             <div class="stat-value-modern">50+</div>
                             <div class="stat-label-modern">Spécialités</div>
-                            <div class="stat-trend">🏥 Toutes领域</div>
+                            <div class="stat-trend">🏥 Toutes spécialités</div>
                         </div>
                         <div class="stat-card-modern">
                             <div class="stat-value-modern">24/7</div>
@@ -634,7 +631,7 @@
     <script src="js/main.js"></script>
     
     <!-- Tests unitaires (seulement en développement) -->
-    <script src="tests/unit-tests.js"></script>
+    <!-- <script src="tests/unit-tests.js"></script> -->
 
 </body>
 </html>
