--- a/index.html
+++ b/index.html
@@ -625,6 +625,8 @@
     <script src="js/tabs/test-mode.js"></script>
     
     <!-- Script de diagnostic -->
+    <script src="diagnostic-nav.js"></script>
+    <script src="fix-navigation.js"></script>
     <script src="diagnostic-debug.js"></script>
     
     <!-- Point d'entrée principal -->
