--- a/index.html
+++ b/index.html
@@ -446,6 +446,8 @@
     
     <!-- Point d'entrée principal -->
     <script src="js/main.js"></script>
+    <!-- Diagnostic Firebase Authentication -->
+    <script src="firebase-auth-diagnostic.js"></script>
     
     <!-- Tests unitaires (seulement en développement) -->
     <script src="tests/unit-tests.js"></script>
