feat: Add admin webhook management interface with user and webhook statistics
- Implemented admin-webhook-styles.css for modern and responsive design.
- Created admin-webhooks.html for the admin interface, including navigation and authentication modal.
- Developed admin-webhook-manager.js to handle user and webhook management, including loading users, managing webhooks, and displaying statistics.
- Added functionality for saving, deleting, and toggling webhook status, along with user search and filter options.
- Integrated Firebase for user authentication and Firestore for data storage.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <span class="nav-icon">❓</span>
                     FAQ
                 </button>
+                <button class="fixed-nav-btn" onclick="window.open('admin-webhooks.html', '_blank')">
+                    <span class="nav-icon">🎛️</span>
+                    Admin
+                </button>
                 <button class="fixed-nav-btn auth-btn" id="authButton">
                     <span class="nav-icon">🔐</span>
                     <span id="authButtonText">Connexion</span>
