--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style-fallback.css">
 </head>
 <body>
-    <!-- Navigation fixe horizontale en header -->
+    <!-- Navigation fixez horizontale en header -->
     <header class="fixed-nav-header" id="fixedNavHeader">
         <div class="fixed-nav-container">
             <div class="nav-logo-left">
