fix: Resolve signup button issue due to malformed HTML in authentication tab

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                         <span class="auth-tab-icon" aria-hidden="true">🔐</span>
                         Connexion
                     </button>
-                    <button type="button" id="modalSignUpTab" class="auth-tab-btn" role="tab" aria-selected="false" aria-controls="modalEmail <span class="AuthForm">
-                       auth-tab-icon" aria-hidden="true">✨</span>
+                    <button type="button" id="modalSignUpTab" class="auth-tab-btn" role="tab" aria-selected="false" aria-controls="modalEmailAuthForm">
+                        <span class="auth-tab-icon" aria-hidden="true">✨</span>
                         Inscription
                     </button>
                 </div>
@@ -259,7 +259,6 @@
         </div>
     </div>
 
-    <!-- Firebase SDK v9+ Compat -->
     <!-- Firebase SDK v10+ Modulaire -->
     <script type="module">
         // Configuration Firebase
