--- a/tab-guide.html
+++ b/tab-guide.html
@@ -347,6 +347,123 @@
     </div>
 </section>
 
+<!-- FAQ Section -->
+<section class="faq-section">
+    <h2 class="faq-title">❓ Questions Fréquemment Posées</h2>
+    
+    <div class="faq-container">
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">🎤</span>
+                <span class="faq-text">Comment fonctionne la dictée vocale de DictaMed ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>DictaMed utilise une intelligence artificielle spécialisée dans le domaine médical pour transcrire vos observations vocales en temps réel. Il vous suffit de parler naturellement, l'IA se charge de structurer et d'organiser automatiquement les données dans votre template SPSS.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">🔒</span>
+                <span class="faq-text">Mes données sont-elles sécurisées ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Absolument. DictaMed est entièrement conforme RGPD et utilise un chiffrement de bout en bout pour protéger vos données sensibles. Vos informations médicales sont traitées avec le plus haut niveau de sécurité et ne sont jamais partagées avec des tiers.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">⏱️</span>
+                <span class="faq-text">Combien de temps puis-je gagner avec DictaMed ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Nos utilisateurs rapportent en moyenne un gain de temps de 70% par rapport à la saisie manuelle. Cela représente jusqu'à 40% de votre temps de recherche récupéré pour vous concentrer sur l'analyse plutôt que sur la saisie de données.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">📊</span>
+                <span class="faq-text">Le fichier SPSS final est-il directement utilisable ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Oui, le fichier SPSS que vous recevez est entièrement structuré et prêt pour l'analyse statistique. Toutes les variables sont correctement codées et les données sont nettoyées et validées avant la livraison.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">🎯</span>
+                <span class="faq-text">Quelle est la précision de la reconnaissance vocale ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Notre IA médicale optimisée atteint une précision de plus de 95% pour la transcription vocale spécialisée. Cette performance est rendue possible grâce à notre entraînement sur un large corpus de vocabulaire médical français.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">📱</span>
+                <span class="faq-text">Puis-je utiliser DictaMed sur mobile ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Oui, DictaMed est entièrement compatible avec tous les appareils : ordinateur, tablette et smartphone. Vous pouvez dicter vos données depuis n'importe où, l'interface s'adapte automatiquement à votre écran.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">🧪</span>
+                <span class="faq-text">Y a-t-il un mode test gratuit ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Oui, nous proposons un mode test qui vous permet de découvrir toutes les fonctionnalités de DictaMed sans engagement. Vous pouvez entraîner votre diction et visualiser le traitement en temps réel de vos données.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">🔧</span>
+                <span class="faq-text">Combien de temps faut-il pour configurer DictaMed ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>La configuration initiale prend moins de 48 heures. Nous nous occupons de l'adaptation de votre template SPSS et de la configuration de votre environnement personnalisé. Vous recevez ensuite vos identifiants sécurisés pour commencer immédiatement.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">👥</span>
+                <span class="faq-text">Quel support est inclus avec DictaMed ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>DictaMed inclut un support 24/7 avec accompagnement personnalisé et formation incluse. Notre équipe vous aide à optimiser votre technique de dictée et reste disponible pour toute question technique.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <button class="faq-question" onclick="toggleFaq(this)">
+                <span class="faq-icon">💰</span>
+                <span class="faq-text">Quel est le retour sur investissement de DictaMed ?</span>
+                <span class="faq-arrow">▼</span>
+            </button>
+            <div class="faq-answer">
+                <p>Le ROI de DictaMed est généralement positif dès le premier mois d'utilisation. En récupérant jusqu'à 40% de votre temps de recherche et en réduisant les erreurs de saisie, l'investissement se rembourse rapidement tout en améliorant significativement votre productivité.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Workflow Section -->
 <script>
 function toggleFaq(button) {
