--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
     
     <!-- 4. GESTIONNAIRE D'AUTHENTIFICATION (CRITIQUE POUR DMI) -->
     <script src="js/components/firebase-auth-manager.js"></script>
+    <script src="js/components/auth-security-manager.js"></script>
     <script src="js/components/auth-modal.js"></script>
     <script src="js/components/admin-navigation-manager.js"></script>
     
