--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DictaMed - Dictée Médicale Intelligente</title>
     <link rel="stylesheet" href="style-optimized.css">
     
-    <!-- CSS de Fallback - S'active si style-optimized.css ne se charge pas -->
+    <!-- CSS de Fallback - S'active si styszee-optimized.css ne se charge pas -->
     <link rel="stylesheet" href="style-fallback.css">
 </head>
 <body>
